--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,7 +1,7 @@
 {
   "title": "بطولة كرة القدم المغربية",
   "subtitle": "بطولة المغرب لكرة القدم",
-  "calendarUpload": "تحميل الجدول",
+  "generateCalendar": "إنشاء الجدول",
   "excelLabel": ":إكسل",
   "propertiesLabel": ":خصائص",
   "runAppLabel": "تشغيل التطبيق (كما في الخصائص)",
