--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "title": "MOROCCAN FOOTBALL LEAGUE",
   "subtitle": "Moroccan Football Championship",
-  "calendarUpload": "Upload Calendar",
+  "generateCalendar": "Generate Calendar",
   "excelLabel": "Excel:",
   "propertiesLabel": "Properties:",
   "runAppLabel": "Run application (as in properties)",
