Add pantalla de Jobs

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,6 +1,7 @@
-{
+{                                                                                                            
   "nav": {
     "generateCalendar": "إنشاء الجدول",
+    "jobs": "المهام",
     "endpoints": "نقاط النهاية",
     "logs": "السجلات",
     "backend": "الخادم",
