--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "nav": {
     "generateCalendar": "Generate Calendar",
+    "jobs": "Jobs",
     "endpoints": "End Points",
     "logs": "Logs",
     "backend": "Backend",
