update eror header del jobs

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,4 @@
-{                                                                                                            
+{
   "nav": {
     "generateCalendar": "إنشاء الجدول",
     "jobs": "المهام",
@@ -54,6 +54,31 @@
     "info2": "يتم فحص حالة الخادم كل 5 ثوانِ",
     "info3": "استخدم \"تحديث السجلات\" للتحديث الفوري",
     "info4": "إذا كان الخادم غير متصل، تحقق من تشغيل Spring Boot على المنفذ 8080"
+  },
+  "jobs": {
+    "title": "مراقب المهام غير المتزامنة",
+    "subtitle": "مراقبة في الوقت الفعلي لمهام توليد التقاويم",
+    "createNew": "إنشاء مهمة جديدة",
+    "cancel": "إلغاء",
+    "refresh": "تحديث يدوي",
+    "createForm": "إنشاء مهمة غير متزامنة جديدة",
+    "excelFile": "ملف إكسل:",
+    "propertiesFile": "ملف الخصائص:",
+    "createJob": "إنشاء مهمة",
+    "creating": "جاري الإنشاء...",
+    "loading": "جاري تحميل المهام...",
+    "autoRefresh": "قائمة المهام (تحديث تلقائي كل 3 ثواني)",
+    "total": "المجموع",
+    "active": "نشطة",
+    "completed": "مكتملة",
+    "noJobs": "لا توجد مهام متاحة",
+    "createFirst": "قم بإنشاء مهمتك الأولى غير المتزامنة باستخدام زر \"إنشاء مهمة جديدة\"",
+    "demo": "معلومات العرض التوضيحي",
+    "demoInfo1": "كل مهمة تستغرق 40 ثانية لتكتمل (عرض توضيحي)",
+    "demoInfo2": "يتم تحديث المهام تلقائياً كل 3 ثوانِ",
+    "demoInfo3": "الحالات: في الانتظار ← قيد التشغيل ← مكتمل/خطأ/ملغي",
+    "demoInfo4": "يمكن تحميل الملفات عند اكتمال المهمة",
+    "demoInfo5": "يمكن إلغاء المهام أثناء الانتظار أو التشغيل"
   },
   "error": {
     "cors": "CORS أو الخادم لا يستجيب",
