--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,6 +55,31 @@
     "info3": "Use \"Update Logs\" for immediate manual update",
     "info4": "If backend is offline, verify Spring Boot is running on port 8080"
   },
+  "jobs": {
+    "title": "Asynchronous Jobs Monitor",
+    "subtitle": "Real-time monitoring of calendar generation jobs",
+    "createNew": "Create New Job",
+    "cancel": "Cancel",
+    "refresh": "Manual Refresh",
+    "createForm": "Create New Asynchronous Job",
+    "excelFile": "Excel File:",
+    "propertiesFile": "Properties File:",
+    "createJob": "Create Job",
+    "creating": "Creating...",
+    "loading": "Loading jobs...",
+    "autoRefresh": "Jobs List (Auto-refresh every 3s)",
+    "total": "Total",
+    "active": "Active",
+    "completed": "Completed",
+    "noJobs": "No jobs available",
+    "createFirst": "Create your first asynchronous job using the \"Create New Job\" button",
+    "demo": "Demo Information",
+    "demoInfo1": "Each job takes 40 seconds to complete (demo)",
+    "demoInfo2": "Jobs are automatically updated every 3 seconds",
+    "demoInfo3": "States: PENDING → RUNNING → COMPLETED/ERROR/CANCELLED",
+    "demoInfo4": "Files can be downloaded when job is COMPLETED",
+    "demoInfo5": "Jobs can be cancelled while PENDING or RUNNING"
+  },
   "error": {
     "cors": "CORS or server not responding",
     "notFound": "Endpoint not found (404)",
