Borrado de helm  y carga desde el backend

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -6,7 +6,10 @@
     "logs": "السجلات",
     "backend": "الخادم",
     "online": "متصل",
-    "offline": "غير متصل"
+    "offline": "غير متصل",
+    "checking": "جاري التحقق...",
+    "notChecked": "اضغط للتحقق",
+    "clickToCheck": "اضغط للتحقق من حالة الخادم"
   },
   "calendar": {
     "title": "توليد التقويم",
@@ -27,7 +30,8 @@
     "botolaD1": "البطولة الأولى",
     "botolaD2": "البطولة الثانية",
     "cnpff1": "الاتحاد الأول",
-    "cnpff2": "الاتحاد الثاني"
+    "cnpff2": "الاتحاد الثاني",
+    "errorBackendNotAvailable": "الخادم غير متاح: لا يمكن تحميل خيارات التكوين. يرجى التأكد من تشغيل خادم Spring Boot على المنفذ 8080."
   },
   "endpoints": {
     "title": "حالة الاتصال",
